--- a/References.bib
+++ b/References.bib
@@ -14,5 +14,18 @@
  edition = {2nd},
  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
  address = {Boston, MA, USA},
-} 
+}
+@article{3,
+author = {Roger D. Chamberlain, and Jeremy D. Buhler, and Arpith C. Jacob, },
+title = {Rapid RNA Folding: Analysis and Acceleration of the Zuker Recurrence},
+journal = {Field-Programmable Custom Computing Machines, Annual IEEE Symposium on},
+volume = {00},
+number = {},
+issn = {},
+year = {2010},
+pages = {87-94},
+doi = {doi.ieeecomputersociety.org/10.1109/FCCM.2010.22},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+}
 
