--- a/References.bib
+++ b/References.bib
@@ -16,7 +16,7 @@
  address = {Boston, MA, USA},
 }
 @article{3,
-author = {Roger D. Chamberlain, and Jeremy D. Buhler, and Arpith C. Jacob, },
+author = {Roger D. Chamberlain, and Jeremy D. Buhler, and Arpith C. Jacob},
 title = {Rapid RNA Folding: Analysis and Acceleration of the Zuker Recurrence},
 journal = {Field-Programmable Custom Computing Machines, Annual IEEE Symposium on},
 volume = {00},
@@ -28,4 +28,16 @@ doi = {doi.ieeecomputersociety.org/10.1109/FCCM.2010.22},
 publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
 }
-
+@article{4,
+author = { Junjie Li , Sanjay Ranka , Sartaj Sahni},
+title = {Multicore and GPU algorithms for nussinov RNA folding},
+journal = {2013 IEEE 3rd International Conference on Computational Advances in Bio and Medical Sciences (ICCABS)},
+volume = {00},
+number = {},
+issn = {},
+year = {2013},
+pages = {1-2},
+doi = {doi.ieeecomputersociety.org/10.1109/ICCABS.2013.6629204},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+}
