--- a/paper2017.tex
+++ b/paper2017.tex
@@ -447,7 +447,7 @@ O algoritmo clássico de RNA Folding to find the Secondary Structure utiliza com
 TODO:SUBFIGURE FUNÇÃO RECURSIVA a).
 TODO:SUBFIGURE dependencia triangular b).
 
-Vendo a função a) podemos classifica-lá como Non-serial Polyadic Dynamic Programming(NPDP) esse tipo de DP se caracteriza por possuir um dependência triangular como mostrado em b) diferente das outras classificações que geralmente são retangulares. 
+Vendo a função a) podemos classifica-lá como Non-serial Polyadic Dynamic Programming(NPDP) esse tipo de DP se caracteriza por possuir um dependência triangular como mostrado em b) diferente das outras classificações que geralmente são retangulares. Trabalhos resolvendo \cite{3,4}
 
 
 
