--- a/References.bib
+++ b/References.bib
@@ -41,3 +41,29 @@ doi = {doi.ieeecomputersociety.org/10.1109/ICCABS.2013.6629204},
 publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
 }
+@article{5,
+author = {Wu-chun Feng, and Chao-Chin Wu, and Jenn-Yang Ke, and Heshan Lin},
+title = {Optimizing Dynamic Programming on Graphics Processing Units via Adaptive Thread-Level Parallelism},
+journal = {Parallel and Distributed Systems, International Conference on},
+volume = {00},
+number = {},
+issn = {1521-9097},
+year = {2011},
+pages = {96-103},
+doi = {doi.ieeecomputersociety.org/10.1109/ICPADS.2011.92},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+}
+@article{6,
+author = {Wu-chun Feng, and Shucai Xiao, },
+title = {Inter-block GPU communication via fast barrier synchronization},
+journal = {2010 IEEE International Symposium on Parallel & Distributed Processing (IPDPS)},
+volume = {00},
+number = {},
+issn = {},
+year = {2010},
+pages = {1-12},
+doi = {doi.ieeecomputersociety.org/10.1109/IPDPS.2010.5470477},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+}
